# sportslab

./: .dockerignore  .env.docker.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: acceptance-reviewer.md  architect-agent.md  architect.md  code-architect.md  code-reviewer.md  data-research-agent.md  dataeng.md  designer.md  drmat.md  infra-agent.md  lead.md  ml-engineer-agent.md  mleng.md  report-agent.md  reporter.md  reviewer-agent.md  senior-ml-engineer.md  strategy-agent.md  swe.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
apps/: .gitkeep
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: README  env.py
apps/api/alembic/versions/: 20260422_0000_initial_schema.py
apps/api/src/api/: __init__.py  config.py  logging_config.py  main.py
apps/api/src/api/db/: __init__.py  base.py  models.py
apps/api/src/api/middleware/: __init__.py  clerk_auth.py
apps/api/src/api/models/: __init__.py  admin.py  alerts.py  common.py  predictions.py  track_record.py  users.py  webhooks.py
apps/api/src/api/routers/: admin.py  alerts.py  health.py  predictions.py  track_record.py  users.py  webhooks.py
apps/api/tests/: conftest.py  test_admin.py  test_alerts.py  test_clerk_auth.py  test_db_migrations.py  test_delete_my_bet.py  test_export_track_record.py  test_health.py  test_invite_user.py  test_predictions.py  test_promote_staging.py  test_track_record.py  test_users.py  test_webhooks.py
apps/api/tests/e2e/: __init__.py  conftest.py  test_error_paths.py  test_user_journey.py
docs/: .gitkeep  alpha_launch_plan.md  codex_prompts.md  codex_prompts_r4.md  codex_prompts_r5a.md  codex_prompts_r5b.md  codex_status_r4.md  codex_status_r5a.md  codex_tasks.md  codex_tasks_r4.md  codex_tasks_r5a.md  codex_tasks_r5b.md  feature_leakage_audit.md  footballdatabase_poc.md  math_audit.md  migration_pattern.md  pricing_validation.md  research_data_sources_leagues.md  research_xg_data_sources.md  tech_debt_audit.md
docs/alfa/: adr-0016-alpha-delivery-telegram.md  final_task_plan.md  graphics_for_claude_design.md  hero_image_brief_nanobanana.md  landing_copy.md  landing_disclaimer.md  legal_research.md  ml_experiments_alpha.md  ml_experiments_draft_drmat.md  ml_roadmap_longterm_drmat.md  ml_roadmap_longterm_mleng.md  ml_roadmap_longterm_mlops.md  panel_and_pricing_spec_summary.md  panel_copy.md  privacy_policy.md  research_r5b_sports.md  team_discussion_infra_2026-04-12.md  tos_alpha.md
docs/architecture/: adr-0001-uv-workspace-install.md  adr-0002-structlog-for-logging.md  adr-0003-pydantic-settings-for-configuration.md  adr-0004-plotly-for-report-charts.md  adr-0005-typer-for-cli.md  adr-0006-walk-forward-cv-for-backtesting.md  adr-0007-calibration-selector-walk-forward.md  adr-0008-portfolio-kelly-with-constraints.md  adr-0009-football-data-couk-for-pinnacle-odds.md  adr-0010-solo-founder-roadmap.md  adr-0011-automated-leakage-detection.md  adr-0012-framer-landing-nextjs-dashboard.md  adr-0013-cron-over-prefect-for-orchestration.md  adr-0014-tabpfn-optional-dependency.md  adr-0015-report-design-inter-jetbrains-plotly.md  adr-0017-dual-machine-pi-dev.md  adr-0018-monorepo-strategy-confirmed.md  adr-0019-quad-machine-infrastructure.md
docs/design/: backtest_report_spec.md  bet_slip_report_spec.md
docs/ops/: cron.md
experiments/: all_14_leagues.yaml  championship.yaml  current_season.yaml  eredivisie.yaml  hybrid_v1.yaml  quick_test.yaml
ideas/: README.md  ip_moat.md  phase_transitions.md  prompts.md  solo_founder_roadmap.md  team.md  tech_stack.md  vision.md
ideas/coordination/: github_setup.md  linear_setup.md  weekly_rhythm.md
ideas/infrastructure/: bookmaker_accounts.md  cost_model.md  data_strategy.md  secrets_and_compliance.md
ideas/phase_0_foundations/: overview.md  repo_strategy.md  tasks.md  tooling.md
ideas/phase_1_code_cleanup/: overview.md  target_repo_layout.md  tasks.md
ideas/phase_2_new_features/: overview.md  research_backlog.md  tasks.md
ideas/phase_3_more_leagues/: data_source_matrix.md  overview.md  tasks.md
ideas/phase_4_more_sports/: overview.md  sport_prioritization.md  tasks.md
ideas/phase_5_automation/: machine_architecture.md  overview.md  tasks.md
ideas/phase_6_product_app/: overview.md  product_offerings.md  tasks.md  ui_ux_blueprint.md
infra/: .env.example  .gitkeep  Dockerfile  backup.sh  crontab.example  daily_pipeline.py  docker-compose.yml  restore.sh
research/: .gitkeep
scripts/: download_all_leagues.py  export_track_record.py  ingest_all_leagues.py  integrate_fifa_ratings.py  integrate_transfermarkt.py  merge_sofascore.py  scrape_bel_fast.py  scrape_sofascore_all.py  scrape_sofascore_watchdog.py  setup_pi.sh  setup_vm.sh
scripts/cron/: track_record_weekly.sh
scripts/docker/: init.sql
